--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,11 @@ on:
   pull_request:
   workflow_dispatch:
 
+# Ensures that only one deploy task per branch/environment will run at a time.
+concurrency:
+  group: gh-ref-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   tests:
     name: "Build Morph C++ FW on ${{ matrix.os }}"
