--- a/platformio.ini
+++ b/platformio.ini
@@ -4,9 +4,11 @@ default_envs = esp32dev
 
 [env:esp32dev]
 platform = https://github.com/platformio/platform-espressif32.git#v5.2.0
-framework = arduino, espidf
+framework = espidf, arduino
 board = esp32dev
 board_build.partitions = partitions.csv
+platform_packages = 
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 lib_extra_dirs = 
     components
 build_flags = 
