Add lib_deps to prod env

--- a/platformio.ini
+++ b/platformio.ini
@@ -69,6 +69,11 @@ board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
     components
+lib_deps =
+    https://github.com/open-morphs/esp32-snippets#cpp_utils-open_morphs
+    https://github.com/open-morphs/lvgl_esp32_drivers#lvgl-v8.3-hack
+    https://github.com/open-morphs/esp32_https_server#sha-fix
+    https://github.com/open-morphs/lvgl_classes#lvgl-v8.3-compat
 board_build.embed_txtfiles =
     main/webserver/index_ota.html
     main/webserver/jquery-3.4.1.min.js
