Add sdkconfigs for envs

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
 src_dir = main
-default_envs = esp32_debug
+default_envs = dev
 
-[env:esp32_debug]
+[env:dev]
 platform = https://github.com/platformio/platform-espressif32.git#develop
 framework = espidf, arduino
 board = esp32dev
