--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,28 +12,21 @@ concurrency:
 
 jobs:
   tests:
-    name: "Build Morph C++ FW on ${{ matrix.os }}"
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-latest
-          - windows-latest
-          - macos-latest
-    runs-on: ${{ matrix.os }}
+    name: "Build Morph C++ FW" 
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Cache pip
+      - name: Cache PyPi packages.
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: ${{ runner.os }}-pip-
-      - name: Cache PlatformIO
+      - name: Cache PlatformIO directory.
         uses: actions/cache@v3
         with:
           path: ~/.platformio
@@ -41,8 +34,6 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
       - name: Install PlatformIO
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade platformio
+        run: python3 -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/master/scripts/get-platformio.py)"
       - name: Build project
         run: pio run
