--- a/platformio.ini
+++ b/platformio.ini
@@ -3,18 +3,13 @@ src_dir = main
 default_envs = dev
 
 [env:dev]
-platform = https://github.com/platformio/platform-espressif32.git#develop
-framework = espidf, arduino
+platform = espressif32
+platform_packages = platformio/framework-espidf@3.40402.0
+framework = espidf
 board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
     components
-lib_deps =
-    https://github.com/open-morphs/esp32-snippets#cpp_utils-open_morphs
-    https://github.com/lvgl/lvgl#ec9de515b36641be565d7bace5863ab631ce3b69
-    https://github.com/open-morphs/lvgl_esp32_drivers#db51c38e639cc2cf89e91d191a41a7d33b18a307
-    https://github.com/open-morphs/esp32_https_server#sha-fix
-    https://github.com/open-morphs/lvgl_classes#e33034d2ac1cfd36bbf0511bed28f1f605d08dd8
 board_build.embed_txtfiles =
     main/webserver/index_ota.html
     main/webserver/jquery-3.4.1.min.js
@@ -26,22 +21,22 @@ board_build.embed_txtfiles =
     main/webserver/stylesheet.css
 build_flags = 
   -Iinclude
-  # DEBUG/RELEASE CONFIGURATION
+# DEBUG/RELEASE CONFIGURATION
   -DRELEASE_BUILD
-  #-DUSE_DBG
+#-DUSE_DBG
   -DBATTERY_CONTROL_ENABLED=0
-  # COMPONENTS BUILD FLAGS
+# COMPONENTS BUILD FLAGS
   -DLV_LVGL_H_INCLUDE_SIMPLE
   -DARDUINOJSON_USE_LONG_LONG
   -DMAX_JSONDOC_SIZE=1024UL
-  # HW setup
+# HW setup
   -DCASE_BTN_GPIO=GPIO_NUM_17
   -DSELF_POWER_GPIO=GPIO_NUM_16
-  # COMMON HW_SETUP
+# COMMON HW_SETUP
   -DLED_BL_GPIO=GPIO_NUM_27
   -DMAX_PAIRED_DEVICES=8UL
   -DMAX_HANDSET_IN_PAYLOAD=5UL
-  # PERIODS SETTINGS
+# PERIODS SETTINGS
   -DLV_TICK_PERIOD_MS=20UL
   -DLVGL_TASK_PERIOD=20UL
   -DSWITCH_OFF_PRESS_TIME_MS=3000UL
@@ -51,21 +46,22 @@ build_flags =
   -DBLE_DISCONNECTION_ACK_TIMEOUT=20000UL
   -DBLE_CONNECTION_ACK_TIMEOUT=20000UL
   -DBLE_HANDSET_GET_INFO_TIMEOUT=20000UL
-  # BATTERY SETTINGS
+# BATTERY SETTINGS
   -DMIN_BATTERY_PERCENT_LAUNCH=5UL
   -DWARNING_BATTERY_PERCENT=10
   -DBATTERY_YELLOW_LEVEL=40UL
   -DBATTERY_ORANGE_LEVEL=25UL
   -DBATTERY_RED_LEVEL=WARNING_BATTERY_PERCENT
-  # SETTINGS
+# SETTINGS
   -DFW_VERSION=\"0.1.1\"
   -DHW_VERSION=\"1.0\"
-  # OTHER
+# OTHER
   -DANC_TRANSP_NEW_VERSION
 
 [env:prod]
-platform = https://github.com/platformio/platform-espressif32.git#develop
-framework = espidf, arduino
+platform = espressif32
+platform_packages = platformio/framework-espidf@3.40402.0
+framework = espidf
 board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
@@ -86,22 +82,22 @@ board_build.embed_txtfiles =
     main/webserver/stylesheet.css
 build_flags = 
   -Iinclude
-  # DEBUG/RELEASE CONFIGURATION
+# DEBUG/RELEASE CONFIGURATION
   -DRELEASE_BUILD
-  #-DUSE_DBG
+#-DUSE_DBG
   -DBATTERY_CONTROL_ENABLED=1
-  # COMPONENTS BUILD FLAGS
+# COMPONENTS BUILD FLAGS
   -DLV_LVGL_H_INCLUDE_SIMPLE
   -DARDUINOJSON_USE_LONG_LONG
   -DMAX_JSONDOC_SIZE=1024UL
-  # HW setup
+# HW setup
   -DCASE_BTN_GPIO=GPIO_NUM_17
   -DSELF_POWER_GPIO=GPIO_NUM_16
-  # COMMON HW_SETUP
+# COMMON HW_SETUP
   -DLED_BL_GPIO=GPIO_NUM_27
   -DMAX_PAIRED_DEVICES=8UL
   -DMAX_HANDSET_IN_PAYLOAD=5UL
-  # PERIODS SETTINGS
+# PERIODS SETTINGS
   -DLV_TICK_PERIOD_MS=20UL
   -DLVGL_TASK_PERIOD=20UL
   -DSWITCH_OFF_PRESS_TIME_MS=3000UL
@@ -111,14 +107,14 @@ build_flags =
   -DBLE_DISCONNECTION_ACK_TIMEOUT=20000UL
   -DBLE_CONNECTION_ACK_TIMEOUT=20000UL
   -DBLE_HANDSET_GET_INFO_TIMEOUT=20000UL
-  # BATTERY SETTINGS
+# BATTERY SETTINGS
   -DMIN_BATTERY_PERCENT_LAUNCH=5UL
   -DWARNING_BATTERY_PERCENT=10
   -DBATTERY_YELLOW_LEVEL=40UL
   -DBATTERY_ORANGE_LEVEL=25UL
   -DBATTERY_RED_LEVEL=WARNING_BATTERY_PERCENT
-  # SETTINGS
+# SETTINGS
   -DFW_VERSION=\"0.1.1\"
   -DHW_VERSION=\"1.0\"
-  # OTHER
+# OTHER
   -DANC_TRANSP_NEW_VERSION
