Update dep lock, and downgrade packages to ESP-IDF v4.4

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,8 +4,10 @@ default_envs = dev
 
 [env:dev]
 platform = espressif32
-platform_packages = platformio/framework-espidf@3.40402.0
-framework = espidf
+platform_packages =
+    platformio/framework-espidf@3.40403.0
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32#2.0.6
+framework = espidf, arduino
 board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
@@ -60,17 +62,14 @@ build_flags =
 
 [env:prod]
 platform = espressif32
-platform_packages = platformio/framework-espidf@3.40402.0
-framework = espidf
+platform_packages =
+    platformio/framework-espidf@3.40403.0
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32#2.0.6
+framework = espidf, arduino
 board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
     components
-lib_deps =
-    https://github.com/open-morphs/esp32-snippets#cpp_utils-open_morphs
-    https://github.com/open-morphs/lvgl_esp32_drivers#lvgl-v8.3-hack
-    https://github.com/open-morphs/esp32_https_server#sha-fix
-    https://github.com/open-morphs/lvgl_classes#lvgl-v8.3-compat
 board_build.embed_txtfiles =
     main/webserver/index_ota.html
     main/webserver/jquery-3.4.1.min.js
