Use submodules, locked at contractor's hashes
- Also remove Arduino from PIO config

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,8 +6,7 @@ default_envs = dev
 platform = espressif32
 platform_packages =
     platformio/framework-espidf@3.40403.0
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32#2.0.6
-framework = espidf, arduino
+framework = espidf
 board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
@@ -64,8 +63,7 @@ build_flags =
 platform = espressif32
 platform_packages =
     platformio/framework-espidf@3.40403.0
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32#2.0.6
-framework = espidf, arduino
+framework = espidf
 board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
