Lock ESP-IDF to v4.4 and arduino-esp32 to latest
Signed-off-by: Dom Rodriguez <shymega@shymega.org.uk>

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,8 +5,9 @@ default_envs = dev
 [env:dev]
 platform = espressif32
 platform_packages =
-    platformio/framework-espidf@3.40403.0
-framework = espidf
+    platformio/framework-arduinoespressif32@^3.20007.0
+    platformio/framework-espidf@3.40404.0
+framework = espidf, arduino
 board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
@@ -62,8 +63,9 @@ build_flags =
 [env:prod]
 platform = espressif32
 platform_packages =
-    platformio/framework-espidf@3.40403.0
-framework = espidf
+    platformio/framework-arduinoespressif32@^3.20007.0
+    platformio/framework-espidf@3.40404.0
+framework = espidf, arduino
 board = esp32dev
 board_build.partitions = partitions.csv
 lib_extra_dirs = 
