Add strict flags to src_dirs compiler
Signed-off-by: Dom Rodriguez <shymega@shymega.org.uk>

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,10 @@ board_build.embed_txtfiles =
     main/webserver/script.js
     main/webserver/settings.html
     main/webserver/stylesheet.css
+build_src_flags =
+  -Wall
+  -Werror
+  -Wextra
 build_flags = 
   -Iinclude
 # DEBUG/RELEASE CONFIGURATION
@@ -79,6 +83,10 @@ board_build.embed_txtfiles =
     main/webserver/script.js
     main/webserver/settings.html
     main/webserver/stylesheet.css
+build_src_flags =
+  -Wall
+  -Werror
+  -Wextra
 build_flags = 
   -Iinclude
 # DEBUG/RELEASE CONFIGURATION
