Remove `remoteUser`/`containerUser` directives

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,5 @@
   "forwardPorts": [
     8008
   ],
-  "userEnvProbe": "loginInteractiveShell",
-  "remoteUser": "vscode",
-  "containerUser": "vscode"
+  "userEnvProbe": "loginInteractiveShell"
 }
